tests/ui/layout/cannot-transmute-unnormalizable-type.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/cannot-transmute-unnormalizable-type.rs:7:5
   |
LL |     Missing: Trait,
   |     ^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
